# RAG_orthopedics

./: .gitmodules  README.md  pyproject.toml
answer/: main.py  pyproject.toml
answer/NaiveRag/: AGENTS.md  README.md  pyproject.toml
answer/NaiveRag/data/: CT泪道造影检查与评估专家共识 .md  HIV感染者巨细胞病毒性视网膜炎筛查和诊疗规范 2025年.md  IgG4相关眼病诊治专家共识（2024版） .md  Leber先天黑矇诊疗的中国专家共识(2023) .md  Leber遗传性视神经病变诊断和治疗专家共识 .md  Meige综合征的神经调控外科治疗中国专家共识(2021年版) .md  X连锁视网膜劈裂症临床诊疗的中国专家共识(2025) .md  《中国眼底OCT操作及图像阅读报告规范德尔菲法专家共识（2025年）》解读.md  《中国眼科药物说明书外使用临床实践指南》解读 .md  《成人斜视PPP_sup+class=_sup ® sup_》解读 .md  《抗肿瘤坏死因子-α单克隆抗体治疗非感染性葡萄膜炎中国专家共识》解读 .md  《无脉络膜症临床诊疗中国专家共识（2024年）》解读.md  《超声乳化手术专用手术器械清洗、消毒、灭菌操作流程》专家共识.md  一站式玻璃体腔注药模式的建立与管理专家共识.md  中医药防控儿童青少年近视指南(社区医生与校医版).md  中医药防控儿童青少年近视指南（学生与家长版）.md  中国Fuchs葡萄膜炎综合征临床诊疗专家共识（2022年）.md  中国专家共识：遗传性视网膜营养不良临床试验中多亮度移动性测试的规范化应用.md  中国临床视觉电生理学相关术语专家共识（2023年） .md  中国人工角膜移植手术专家共识（2021年） .md  中国伴年龄相关性调节不足屈光不正患者激光角膜屈光手术专家共识（2021年）.md  中国低视力康复临床指南（2021）.md  中国假性剥脱综合征眼病临床诊疗专家共识(2025) .md  中国儿童弱视防治专家共识（2021年）.md  中国儿童白内障围手术期管理专家共识（2022年）.md  中国儿童眼外伤救治专家共识（2024年） .md  中国儿童睫状肌麻痹验光及安全用药专家共识（2019年）.md  中国儿童青少年近视防控公共卫生综合干预行动专家共识.md  中国先天性鼻泪管阻塞诊疗专家共识（2021年） .md  中国免疫相关性边缘性角膜病临床诊疗专家共识（2022年）.md  中国内镜泪囊鼻腔吻合术治疗慢性泪囊炎专家共识（2020年）.md  中国单侧眼内期视网膜母细胞瘤诊疗专家共识（2019年） .md  中国单纯疱疹病毒性角膜炎诊疗专家共识（2023年）.md  中国原发性闭角型青光眼诊治方案专家共识（2019年）.md  中国合并白内障的原发性青光眼手术治疗专家共识（2021年） .md  中国圆锥角膜诊断和治疗专家共识（2019年）.md  中国外伤性感染性眼内炎防治专家共识（2023年）.md  中国多焦点人工晶状体临床应用专家共识（2019年）.md  中国婴幼儿全身麻醉下眼病检查专家共识（2022年） .md  中国婴幼儿视力评估专家共识（2023年）.md  (+243 more)
answer/NaiveRag/rag/: __init__.py  cli.py  config.py  embeddings.py  faiss_store.py  rag_pipeline.py  rerank.py  splitter.py
answer/NaiveRag/tests/: test_rag.py
answer/core/: config_manager.py  evaluator.py  model_manager.py  processor.py  query_rewriter.py  rag_processor.py
answer/docs/: 学术评估方法论.md
answer/utils/: evaluation_system.py
config/: .env.example  (+1 more)
(+143 files in other folders)
